@@ -1,3 +1,8 @@
+2008-08-07  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/tracker-indexer/tracker-indexer.c (tracker_indexer_set_running):
+	Fix typo. Also try to flush the index before pausing.
+
 2008-08-07  Martyn Russell  <martyn@imendio.com>
 
 	* utils/qdbm/print-words.c: (main):
